tests/snapshots/golden__preview-json.snap
---
source: tests/golden.rs
expression: "snapshot(&run(&fixture, &[\"preview\", \"--json\"]))"
---
exit: 0
--- stdout ---
{
  "targets": [
    {
      "target": "home",
      "entries": [
        {
          "identity": "dotfiles",
          "source": "dotfiles",
          "artifact": "editor",
          "commit": "<COMMIT>",
          "destination": "<HOME>/deploy/editor",
          "state": "Synced",
          "files": [],
          "rename": null,
          "collapsed": true
        },
        {
          "identity": "dotfiles",
          "source": "dotfiles",
          "artifact": "lint",
          "commit": "<COMMIT>",
          "destination": "<HOME>/deploy/lint",
          "state": "Synced",
          "files": [],
          "rename": null,
          "collapsed": true
        }
      ],
      "collisions": [],
      "warnings": []
    }
  ]
}--- stderr ---
