tests/snapshots/golden__preview.snap
---
source: tests/golden.rs
expression: "snapshot(&run(&fixture, &[\"preview\"]))"
---
exit: 0
--- stdout ---
home -> <HOME>/deploy
  dotfiles@<COMMIT8> editor/ -> <HOME>/deploy/editor
  dotfiles@<COMMIT8> lint/ -> <HOME>/deploy/lint
--- stderr ---
