tests/snapshots/golden__sync.snap
---
source: tests/golden.rs
expression: snapshot(&sync)
---
exit: 0
--- stdout ---
sync complete
--- stderr ---
