tests/snapshots/golden__verify.snap
---
source: tests/golden.rs
expression: "snapshot(&run(&fixture, &[\"verify\"]))"
---
exit: 0
--- stdout ---
all verified
--- stderr ---
